--- a/desafios/desafio012/index.html
+++ b/desafios/desafio012/index.html
@@ -97,7 +97,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://viniciuspitameia.github.io" target="_blank">Vinícius Pitaméia</a> para o Curso do <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a>
+        <p>Site criado por <a href="https://viniciuspitameia.github.io" target="_blank">Vinícius Pitaméia</a> para o Curso de HTML e CSS do <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a>
         </p>
     </footer>
 </body>
