--- a/ex023/tabela002.html
+++ b/ex023/tabela002.html
@@ -12,6 +12,14 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
+        }
+
+        caption {
+            background-color: black;
+            color: white;
+            font-size: 1.5em;
+            padding: 7px;
         }
 
         td, th {
@@ -20,8 +28,18 @@
         }
 
         thead, tfoot {
-            background-color: grey;
+            background-color: rgb(90, 90, 90);
             color: white;
+        }
+
+        thead > tr > th {  /* Fixar cabeçalho da tabela */
+            position: sticky;
+            top: -1px;
+            background-color: rgb(90, 90, 90);
+        }
+
+        tbody > tr:nth-child(2n) {
+            background-color: lightgrey;
         }
 
         td.numero {
@@ -34,6 +52,7 @@
     <!--
         ANATOMIA PARA TABELAS GRANDES
         TABLE
+            CAPTION
             THEAD
                 TR, TD, TH
             TBODY
@@ -42,10 +61,11 @@
                 TR, TD, TH
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 100px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -160,7 +180,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de habitantes</th>
+                <th scope="row">Total de habitantes</th>
                 <td class="numero"><strong>203.078.407</strong></td>
             </tr>
         </tfoot>
