atualizei o exercicio iframe003

--- a/ex024/iframe003.html
+++ b/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora distinctio iure facilis eius, nemo sint repellat nostrum laudantium ipsum! Ipsam eligendi, voluptatem ratione perspiciatis nulla illo dolores a tenetur necessitatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione fugiat ex, molestiae aliquid distinctio vero praesentium, sequi omnis cumque delectus adipisci nam! Delectus dolore commodi dignissimos voluptatibus a modi nulla.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque aliquid excepturi, cumque porro fugit, optio expedita natus dolores laborum quo, perspiciatis vero cum voluptates debitis ab officiis similique maiores earum.</p><img src='imagens/cursoemvideo.png'>"
         <p>Infelizmente seu navegador não é compatível com isso</p>
     </iframe>
 
