--- a/ex025/form007.html
+++ b/ex025/form007.html
@@ -12,8 +12,41 @@
 </head>
 <body>
     <h1>Exemplo de Formulários</h1>
-    <form action="cadastro.php" method="get" autocomplete="on">
+    <form action="cadastro.php" method="post" autocomplete="on">
+        <p>
+            <label for="iest">Estado</label>
+            <select name="estado" id="iest"> <!-- Botão de seleção que abre opções abaixo -->
 
+                <option value="" selected>--- Escolha ---</option> <!-- "option" serve como opções para o select -->
+                <optgroup label="Região Sudeste"> <!-- Declara um grupo de opções -->
+                    <option value="MG">Minas Gerais</option>
+                    <option value="RJ">Rio de Janeiro</option>
+                    <option value="SP">São Paulo</option>
+                </optgroup>
+                
+                <optgroup label="Região Nordeste">
+                    <option value="MA">Maranhão</option>
+                    <option value="PE">Pernambuco</option>
+                    <option value="RN">Rio Grande do Norte</option>
+                </optgroup>
+            </select>
+        </p>
+
+        <p>
+            <label for="iprof">Profissão: </label>
+            <input type="text" name="prof" id="iprof" list="lstprof">
+            <datalist id="lstprof"> <!-- Abre opções para o "text", sempre colocar "id" para funcionar -->
+                <option>Administrador</option>
+                <option>Contabilidade</option>
+                <option>Desenvolvedor</option>
+                <option>Professor</option>
+            </datalist>
+        </p>
+
+        <p>
+            <label for="imsg">Mensagem: </label><br>
+            <textarea name="msg" id="imsg" cols="30" rows="10"></textarea> <!-- Cria uma area de texto. ("cols": quantidade de colunas(linhas) e "rows": quantidade de 'paragrafos') -->
+        </p>
 
         <p>
             <input type="submit" value="Enviar">
