--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Curso HTML e CSS</h1>
     </header>
     <main>
-        <p>Exercicios e Projetos feito durante o Curso do CursoemVideo de >HTML e CSS</p>
+        <p>Exercicios e Projetos feito durante o Curso do CursoemVideo de HTML e CSS</p>
     </main>
 </body>
 </html>
