--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML e CSS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Curso HTML e CSS</h1>
     </header>
     <main>
-        <p>Exercicios e Projetos feito durante o Curso do CursoemVideo de HTML e CSS</p>
+        <h2>Exercicios e Projetos feito durante o Curso do CursoemVideo de HTML e CSS</h2>
+        <menu>
+            <ul>
+                <li><a href="#">Desafios</a></li>
+                <li><a href="#">Exercícios 022</a></li>
+                <li><a href="#">Exercícios 023</a></li>
+                <li><a href="#">Exercícios 024</a></li>
+                <li><a href="#">Exercícios 025</a></li>
+                <li><a href="#">Exercícios 026</a></li>
+            </ul>
+        </menu>
+        
     </main>
 </body>
 </html>
