--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
     </header>
     <main>
         <h2>Exercicios e Projetos feito durante o Curso do CursoemVideo de HTML e CSS</h2>
-        <menu>
-            <ul>
+        <nav>
+            <ul class="menu">
                 <li><a href="#">Desafios</a></li>
+                    <ul>
+                        <li><a href="desafios/desafio012/index.html">Desafio 012</a></li>
+                        <li><a href="desafios/desafio013/tabela01.html">Desafio 013</a></li>
+                        <li><a href="desafios/desafio014">Desafio 014</a></li>
+                    </ul>
                 <li><a href="#">Exercícios 022</a></li>
                 <li><a href="#">Exercícios 023</a></li>
                 <li><a href="#">Exercícios 024</a></li>
                 <li><a href="#">Exercícios 025</a></li>
                 <li><a href="#">Exercícios 026</a></li>
             </ul>
-        </menu>
+        </nav>
         
     </main>
 </body>
