--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     </header>
     <main>
         <h2>Exercicios e Projetos feito durante o Curso do CursoemVideo de HTML e CSS</h2>
-        <nav>
-            <ul class="menu">
-                <li><a href="#">Desafios</a></li>
-                    <ul>
+        <nav class="menu">
+            <ul>
+                <li><a href="#">Desafios</a>
+                    <div class="sub-menu">
                         <li><a href="desafios/desafio012/index.html">Desafio 012</a></li>
                         <li><a href="desafios/desafio013/tabela01.html">Desafio 013</a></li>
                         <li><a href="desafios/desafio014">Desafio 014</a></li>
-                    </ul>
+                    </div>
+                </li>
                 <li><a href="#">Exercícios 022</a></li>
                 <li><a href="#">Exercícios 023</a></li>
                 <li><a href="#">Exercícios 024</a></li>
