--- a/ex026/mq005/index.html
+++ b/ex026/mq005/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -29,5 +31,14 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore officiis vel in quidem facere et obcaecati quisquam dolorum vitae doloribus eum, unde voluptatibus molestias quis ipsa perferendis possimus nulla culpa. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, nostrum accusantium, dolores modi tempore magni neque voluptas similique obcaecati atque itaque consequatur, minima autem consectetur. Consequatur voluptatum nihil ipsam quae?</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
