--- a/ex027/flex004/index.html
+++ b/ex027/flex004/index.html
@@ -7,7 +7,7 @@
     <style>
         div.conteiner {
             background-color: lightsalmon;
-
+            height: 300px;
             display: flex;
             flex-flow: row nowrap;
             justify-content: space-evenly;
@@ -18,6 +18,13 @@
                 space-around
                 space-between
                 space-evenly
+            */
+            align-items: flex-start;
+            /* align-itens: 
+                stretch
+                flex-start
+                flex-end
+                center
             */
         }
 
